<resources>
    <string name="app_name">Rick and Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="alive">Alive</string>
    <string name="species">Species</string>
    <string name="dash">-</string>
    <string name="last_known_location">Last known location:</string>
    <string name="last_location">Last location</string>
    <string name="first_seen_in">First seen in:</string>
    <string name="first_seen">First seen</string>
    <string name="character_image">Character Image</string>
    <string name="error_image">Error image</string>
    <string name="title_activity_character">CharacterActivity</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
</resources>