<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="8dp"
    android:elevation="4dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/characterCard"
    android:backgroundTint="@color/card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/characterImage"
            android:layout_width="150dp"
            android:layout_height="200dp"
            tools:src="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/character_image" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <TextView
                android:id="@+id/characterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/statusColor"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="8dp"/>

                <TextView
                    android:id="@+id/characterStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alive"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dash"
                    android:layout_marginTop="4dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/characterSpecies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/species"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>


            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_known_location"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:textColor="@color/text"/>

            <TextView
                android:id="@+id/characterLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_location"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:textColor="@color/white"/>

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/first_seen_in"-->
<!--                android:layout_marginTop="4dp"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:layout_marginEnd="8dp"-->
<!--                android:textSize="18sp"-->
<!--                android:textColor="@color/text"/>-->

<!--            <TextView-->
<!--                android:id="@+id/characterFirstSeen"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/first_seen"-->
<!--                android:layout_marginTop="4dp"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:layout_marginEnd="8dp"-->
<!--                android:textSize="18sp"-->
<!--                android:textColor="@color/white"/>-->
            
            
            
        </LinearLayout>




    </LinearLayout>

</androidx.cardview.widget.CardView>